# Legacy-LuaSTG-Ex-Plus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: c-cpp.yml
cmake/: TargetCommonOptions.cmake
dxsdk/: CMakeLists.txt
dxsdk/DirectShowClass/: CMakeLists.txt
eyes2d/: CMakeLists.txt  E2DCodePage.hpp  E2DException.hpp  E2DFileManager.cpp  E2DFileManager.hpp  E2DFilePath.hpp  E2DGlobal.hpp  E2DLogSystem.cpp  E2DLogSystem.hpp  E2DMath.hpp  E2DXInputImpl.cpp  E2DXInputImpl.hpp
eyes2d/WIP/: E2DMath.cpp
fancy2d/: CMakeLists.txt  f2d.h  f2dEngine.h  f2dFileSys.h  f2dInputSys.h  f2dInterface.h  f2dRenderDevice.h  f2dRenderer.h  f2dSoundSys.h  f2dVideoSys.h  f2dWindow.h
fancy2d/Engine/: f2dEngineImpl.cpp  f2dEngineImpl.h  f2dFPSControllerImpl.h  f2dFileSysImpl.cpp  f2dFileSysImpl.h  f2dMsgPumpImpl.h  f2dWindowImpl.cpp  f2dWindowImpl.h
fancy2d/Input/: f2dInputJoystickImpl.cpp  f2dInputJoystickImpl.h  f2dInputKeyboardImpl.cpp  f2dInputKeyboardImpl.h  f2dInputMouseImpl.cpp  f2dInputMouseImpl.h  f2dInputSysAPI.cpp  f2dInputSysAPI.h  f2dInputSysImpl.cpp  f2dInputSysImpl.h
fancy2d/RenderDev/: f2dEffectImpl.cpp  f2dEffectImpl.h  f2dGraphics2DImpl.cpp  f2dGraphics2DImpl.h  f2dGraphics3DImpl.cpp  f2dGraphics3DImpl.h  f2dGraphicsImpl.h  f2dMeshDataImpl.cpp  f2dMeshDataImpl.h  f2dRenderDeviceAPI.cpp  f2dRenderDeviceAPI.h  f2dRenderDeviceImpl.cpp  f2dRenderDeviceImpl.h  f2dTextureImpl.cpp  f2dTextureImpl.h
fancy2d/Renderer/: f2dFontFileProvider.cpp  f2dFontFileProvider.h  f2dFontRendererImpl.cpp  f2dFontRendererImpl.h  f2dFontTexProvider.cpp  f2dFontTexProvider.h  f2dGeometryRendererImpl.cpp  f2dGeometryRendererImpl.h  f2dParticle.cpp  f2dParticle.h  f2dRendererImpl.cpp  f2dRendererImpl.h  f2dSpriteAnimationImpl.cpp  f2dSpriteAnimationImpl.h  f2dSpriteImpl.cpp  f2dSpriteImpl.h
fancy2d/Sound/: f2dSoundBufferDynamic.cpp  f2dSoundBufferDynamic.h  f2dSoundBufferPull.cpp  f2dSoundBufferPull.h  f2dSoundBufferStatic.cpp  f2dSoundBufferStatic.h  f2dSoundSpriteImpl.cpp  f2dSoundSpriteImpl.h  f2dSoundSysAPI.cpp  f2dSoundSysAPI.h  f2dSoundSysImpl.cpp  f2dSoundSysImpl.h  f2dVorbisDecoder.cpp  f2dVorbisDecoder.h  f2dWaveDecoder.cpp  f2dWaveDecoder.h
fancy2d/Video/: f2dVideoImpl.cpp  f2dVideoImpl.h  f2dVideoRenderer.cpp  f2dVideoRenderer.h  f2dVideoStream.cpp  f2dVideoStream.h  f2dVideoSysImpl.h
fancylib/: CMakeLists.txt  fcyException.cpp  fcyException.h  fcyMath.h  fcyRefObj.h  fcyType.h
fancylib/fcyFile/: fcyModelBoundingBoxLabel.h  fcyModelIndexLabel.cpp  fcyModelIndexLabel.h  fcyModelLabel.h  fcyModelMaterialLabel.h  fcyModelMeshExporter.cpp  fcyModelMeshExporter.h  fcyModelMeshFile.cpp  fcyModelMeshFile.h  fcyModelSubsetLabel.h  fcyModelVertexLabel.cpp  fcyModelVertexLabel.h  fcyResPackage.cpp  fcyResPackage.h
fancylib/fcyIO/: fcyBinaryHelper.cpp  fcyBinaryHelper.h  fcyDeflate.cpp  fcyDeflate.h  fcyStream.h
fancylib/fcyMisc/: fcyFunctor.h  fcyHash.cpp  fcyHash.h  fcyRandom.cpp  fcyRandom.h  fcyStopWatch.cpp  fcyStopWatch.h  fcyStringHelper.cpp  fcyStringHelper.h
fancylib/fcyNet/: fcyHTTP.cpp  fcyHTTP.h
fancylib/fcyOS/: fcyCPUID.h  fcyDebug.h  fcyMemPool.h  fcyMultiThread.cpp  fcyMultiThread.h  fcySocket.cpp  fcySocket.h
fancylib/fcyParser/: fcyIni.cpp  fcyIni.h  fcyJson.cpp  fcyJson.h  fcyLexicalParser.cpp  fcyLexicalParser.h  fcyPathParser.h  fcyXml.cpp  fcyXml.h
lualib/: CMakeLists.txt
luastg/: AppFrame.cpp  AppFrame.h  AppFrameFontRenderer.cpp  AppFrameRender.cpp  ArchiveWrapper.cpp  Bencode.h  CMakeLists.txt  CirularQueue.hpp  CollisionDetect.cpp  CollisionDetect.h  Config.h  Dictionary.hpp  ESC.cpp  ESC.h  FileManagerWrapper.cpp  GameObject.cpp  GameObject.hpp  GameObjectBentLaser.cpp  GameObjectBentLaser.hpp  GameObjectColliderWrapper.cpp  GameObjectPool.cpp  GameObjectPool.h  Global.h  LW_SteamAPI.cpp  LogSystem.cpp  LogSystem.h  LuaStringToEnum.cpp  LuaStringToEnum.hpp  LuaTableToOption.cpp  LuaTableToOption.hpp  LuaWrapperGlobal.cpp  Main.cpp  Network.cpp  Network.h  ObjectPool.hpp  RemoteDebuggerClient.cpp  RemoteDebuggerClient.h  ResourceAnimation.cpp  ResourceAnimation.hpp  ResourceAudio.cpp  (+22 more)
luastg/LuaWrapper/: LuaWrapper.cpp  LuaWrapper.hpp  LuaWrapperMisc.hpp
luastg/LuaWrapper/IO/: LW_IO.cpp  LW_IO_BinaryReader.cpp  LW_IO_BinaryWriter.cpp  LW_IO_Stream.cpp
luastg/LuaWrapper/Misc/: LW_BentLaser.cpp  LW_Color.cpp  LW_Randomizer.cpp  LW_StopWatch.cpp
luastg/Resource/: LuaSTGPlus.rc
tools/: 编译检查单.txt
tools/backup/: GameObjectList.h
xmath/: CMakeLists.txt
